--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_auth: ^4.6.3
   firebase_storage: ^11.2.4
   fluttertoast: ^8.2.2
+  font_awesome_flutter: ^9.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
