--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   google_sign_in: ^6.1.5
   url_launcher: ^6.0.13
   cached_network_image: ^3.1.0
-  http: ^0.14.0
+  http: ^1.2.1
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
