--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cached_network_image: ^3.1.0
   http: ^1.2.1
   intl: ^0.17.0
+  image_picker: ^0.8.4+8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
